@@ -4,6 +4,10 @@
 
 	=	"\0\10\100\110\01\010\300\362\177"
 	=	"\\\\"
+	=	"a\'bc"
+	=	"a\"bc"
+	=	"a\?bc"
+	=	"a\\bc"
 	=	"a\abc"
 	=	"a\bbc"
 	=	"a\fbc"
@@ -11,7 +15,7 @@
 	=	"a\rbc"
 	=	"a\tbc"
 	=	"a\vbc"
-	=	"a\x01\x10\xa0\xff\xC3bc"
+	=	"a\x5\x6Z\x01\x10\xa0\xff\xC3bc"
 
 	=	">Dbl Quote char "" <"
 	=	">Dollar char $$ <"
@@ -23,6 +27,10 @@
 
 	DCB	0x00, 0x08, 0x40, 0x48, 0x01, 0x08, 0xC0, 0xF2, 0x7F
 	DCB	0x5c, 0x5c
+	DCB	0x61, 0x27, 0x62, 0x63
+	DCB	0x61, 0x22, 0x62, 0x63
+	DCB	0x61, 0x3f, 0x62, 0x63
+	DCB	0x61, 0x5c, 0x62, 0x63
 	DCB	0x61, 0x07, 0x62, 0x63
 	DCB	0x61, 0x08, 0x62, 0x63
 	DCB	0x61, 0x0c, 0x62, 0x63
@@ -30,7 +38,7 @@
 	DCB	0x61, 0x0d, 0x62, 0x63
 	DCB	0x61, 0x09, 0x62, 0x63
 	DCB	0x61, 0x0b, 0x62, 0x63
-	DCB	0x61, 0x01, 0x10, 0xa0, 0xff, 0xc3, 0x62, 0x63
+	DCB	0x61, 0x05, 0x06, 'Z', 0x01, 0x10, 0xa0, 0xff, 0xbc
 
 	=	">Dbl Quote char " :CC: :CHR:&22 :CC: " <"
 	=	">Dollar char " :CC: :CHR:&24 :CC: " <"
